Changelog
=========

2.0b10 (unreleased)
-------------------

- Merge fix of test_queryCatalogOverrideCriteria from 1.3.6 branch
  [toutpt]


2.0b9 (2010-05-01)
------------------

- Values in dropdown "criterion_type" in criterion_edit_form template are now
  properly translated. This closes http://dev.plone.org/plone/ticket/9715
  [vincentfretin]


2.0b8 - 2010-05-01
------------------

- Check the ISO of the stored date, not the ISO8601 (with timezone) that is
  now returned by the accessors
  [davisagli]
 
 
2.0b7 - 2010-04-12
------------------

- List subcollections, not all subobjects, in the subcollections view.
  [elvix]

- Fixed Collection control panel to show the prefs portlet again.
  [davisagli]

- Fixed displaying the links and icons when 'display as table' is checked.
  Links are shown using 'typesUseViewActionInListings', icons are shown using
  plone_view.getIcon.
  [kcleong]


2.0b6 - 2010-03-08
------------------

- Adjust the tests now that `DateTime` objects are stored with a time zone.
  Refs http://dev.plone.org/plone/ticket/10141
  [witsch]


2.0b5 - 2010-03-07
------------------

- Adjust the tests regarding content id generation to expect the re-instated,
  previous behavior.  Refs http://dev.plone.org/plone/ticket/8591
  [witsch]


2.0b4 - 2010-03-05
------------------

- Fix issues with sliding modification/publishing dates by using `DateTime`'s
  `ISO8601` method instead of `ISO`, which doesn't include time zones.
  Refs http://dev.plone.org/plone/ticket/10140, 10141 & 10171.
  [davisagli, witsch]

- Polished markup for "tabs simulation" on collection management screens to
  play nice in Sunburst.
  [spliter]

- Fixed validation for atct_manageTopicMetadata.cpt and
  atct_manageTopicIndex.cpt
  [spliter]

- Updating atct_manageTopicMetadata.cpt and atct_manageTopicIndex.cpt to
  recent markup conventions. References
  http://dev.plone.org/plone/ticket/9981.
  [spliter]


2.0b3 - 2010-02-17
------------------
