@@ -552,10 +552,6 @@ BTreeFolder
 
 Need to make a BTreeFolder manually, and then do a MKCOL inside it:
 
-  >>> lpf = self.portal.portal_types['Large Plone Folder']
-  >>> lpf_allow = lpf.global_allow
-  >>> lpf.global_allow = True
-
   >>> _ = self.folder.invokeFactory('Large Plone Folder', 'test-btree')
 
   >>> print http(r"""
@@ -568,8 +564,6 @@ Need to make a BTreeFolder manually, and then do a MKCOL inside it:
 
   >>> self.folder['test-btree']['test-btreefolder-name'].Title()
   'test-btreefolder-name'
-
-  >>> lpf.global_allow = lpf_allow
 
 PUT Mangling
 ------------
